Fixed zoom limits. Removed "view last session". Graphs are hidden by default

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -193,6 +193,10 @@ header {
     justify-content: center;
 }
 
+.modal-title{
+    color: black;
+}
+
 /*---Loading icon----*/
 #loader {
     position: absolute;
